@@ -42,6 +42,9 @@
  */
 class P4A_Array_Source extends P4A_Data_Source
 {
+	/**
+	 * @var array
+	 */
 	protected $_array = array();
 	
 	/**
@@ -49,17 +52,14 @@ class P4A_Array_Source extends P4A_Data_Source
 	 */
 	public $fields = null;
 
-	public function load($array)
+	public function load(array $array)
 	{
-		if (!is_object($this->fields)) {
-			$this->build("P4A_Collection", "fields");
-		}
-
 		$this->_array = array();
 		$this->_array[-1] = array();
-
+		
+		if (empty($array)) return;
+		
 		$first_row = $array[0];
-
 		if (!is_array($first_row)) {
 			foreach($array as $value) {
 				$this->_array[] = array('0'=>$value);
@@ -72,12 +72,11 @@ class P4A_Array_Source extends P4A_Data_Source
 			}
 		}
 
-
 		foreach ($first_row as $field_name=>$value) {
 			if (!isset($this->fields->$field_name)) {
-				$this->fields->build("p4a_data_field", $field_name);
+				$this->fields->build('P4A_Data_Field', $field_name);
 			}
-			$this->_array[-1][$field_name] = "";
+			$this->_array[-1][$field_name] = '';
 		}
 	}
 
